cropper.jsをwebpackerに完全移行

--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,14 +1,15 @@
 <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag "communities/new" %>
+
 <script>
-    $(document).ready(function () {
+    /*$(document).ready(function () {
         $('#myTags').tagit({
             tagLimit: 20,
             placeholderText: 'タグは20個までです',
             singleField: true,
             availableTags: <%= raw @all_tag_list %>
         });
-    });
+    });*/
 </script>
 
 <div class="container">
