--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -3,7 +3,7 @@
 <p>※このメールは自動送信メールです。</p>
 
 <h2><%= @email %>様</h2>
-<p>、Amicaへようこそ!</p>
+<p>Amicaへようこそ!</p>
 <br />
 <p>「<%= ENV['APP_NAME'] %>」運営の「<%= ENV['DEVELOPMENT_GROUP'] %>」です。</p>
 <p>この度は「<%= ENV['APP_NAME'] %>」にご登録いただきありがとうございます。</p>
