--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,11 +1,11 @@
-<%= javascript_pack_tag 'profiles/edit' %>
 <%= stylesheet_link_tag 'profiles' %>
+<%= javascript_pack_tag 'profiles/edit' %>
 
 <script>
     $(document).ready(function () {
         $('#myTags').tagit({
-            tagLimit: 20,
-            placeholderText: 'タグは20個までです',
+            tagLimit: 40,
+            placeholderText: 'タグは40個までです',
             singleField: true,
             availableTags: <%= raw @all_tag_list %>
         });
@@ -109,7 +109,7 @@
               <div class="col-sm-12">
                 <div class="search-area-colum form-contents">
                   <%= f.label "タグ (1つ2~20文字)" , class:"form-label"%>
-                  <%= f.text_field :tag_list, id:"myTags",autocomplete:"tag_list"%>
+                  <%= f.text_field :tag_list, id:"myTags",value: @tag%>
                 </div>
               </div>
 
