--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -74,31 +74,67 @@
                 <%= link_to '編集',
                             edit_profile_path,
                             style: "color:#FFF;",
-                            class:"btn btn-primary followbtn"
-                %>
+                            class:"btn btn-primary followbtn" %>
               </div>
           <% end %>
         </div>
       </div>
     </div>
   </div>
+
+
   <!-- /.col-md-12 -->
   <div class="row d-flex justify-content-around center-block">
     <div class="col-md-3 col-sm-12 w-100">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
-          <h3 class="page-header">取得資格</h3>
-          <p class="page-subtitle small"><%= @profile.accreditation %></p>
+          <h3 class="page-header">バッジ</h3>
+          <div class="amica-badge register-badge">
+            <span class="at-badge"><i class="fas fa-smile-wink"></i></span>
+            <div class="register-badge-description"><%= @user.created_at.strftime('%Y/%m/%d') %> Amicaに登録した記念バッジ</div>
+          </div>
+          <% if @user.admin %>
+            <div class="amica-badge admin-badge">
+              <span class="at-badge"><i class="fas fa-crown"></i></span>
+              <div class="admin-badge-description">Amica運営バッジ</div>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
+
+    <div class="col-md-3 col-sm-12 w-100">
+      <div class="panel panel-default">
+        <div class="panel-heading m-3">
+          <h3 class="page-header">取得資格</h3>
+          <p class="page-subtitle">
+            <% @user.accreditation_list.each do |t| %>
+              <%= link_to search_tag_path(t) do %>
+                <span><%= t %> </span>
+              <% end %>
+            <% end %>
+
+            <% if @user.accreditation_list.empty? %>
+              未入力です
+            <% end %>
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-9 col-sm-12 w-100">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
           <h3 class="page-header">タグ、趣味</h3>
           <p class="page-subtitle">
             <% @user.tag_list.each do |t| %>
-            #<%= t %>
+              <%= link_to search_tag_path(t) do %>
+                <span>#<%= t %></span>
+              <% end %>
+            <% end %>
+
+            <% if @user.tag_list.empty? %>
+              まだタグを入力していないようです！
             <% end %>
           </p>
         </div>
