--- a/app/assets/stylesheets/profiles_show.scss
+++ b/app/assets/stylesheets/profiles_show.scss
@@ -34,7 +34,7 @@
 .userprofile .userpic .userpicimg {
   height: auto;
   width: 100%;
-  border-radius: 100%;
+  border-radius: 10%;
 }
 .username {
   font-weight: 500;
@@ -399,4 +399,84 @@
 .media-body {
   color: #607D8B;
   overflow: visible;
+}
+
+.amica-badge{
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+.at-badge .svg-inline--fa{
+  width:  30px;
+  height: 30px;
+
+}
+
+.admin-badge{
+  position: relative;
+  cursor: pointer;
+  display:  inline-block;
+  color: rgba(29,144,190,0.8);
+}
+
+.admin-badge-description {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  font-size: 12px;
+  line-height: 1.6em;
+  color: #fff;
+  border-radius: 5px;
+  background: #000;
+  width: 100px;
+}
+
+.admin-badge-description:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  border: 15px solid transparent;
+  border-top: 15px solid #000;
+  margin-left: -15px;
+}
+
+.admin-badge:hover .admin-badge-description{
+  display: inline-block;
+  top: -75px;
+  left: -35px;
+}
+
+.register-badge{
+  position: relative;
+  cursor: pointer;
+  display:  inline-block;
+  color: orange;
+}
+
+.register-badge-description {
+  display: none;
+  position: absolute;
+  padding: 2px;
+  font-size: 12px;
+  line-height: 1.6em;
+  color: #fff;
+  border-radius: 5px;
+  background: #000;
+  width: 100px;
+}
+
+.register-badge-description:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  border: 15px solid transparent;
+  border-top: 15px solid #000;
+  margin-left: -15px;
+}
+.register-badge:hover .register-badge-description{
+  display: inline-block;
+  top: -75px;
+  left: -35px;
 }
