--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -1,19 +1,21 @@
-<%= link_to community_path(community.id), style: "text-decoration: none" do %>
-  <div class="col mb-3">
+<div class="col mb-3">
+  <%= link_to community_path(community.id), style: "text-decoration: none" do %>
     <div class="card rounded shadow-sm">
       <% if community.icon? %>
         <%= image_tag "/communities_image/#{community.icon}",class: "img-fluid" %><br>
       <% else %>
         <%= image_tag "default_icon", class: "img-fluid" %><br>
       <% end %>
-      <div class="carddy">
+      <div class="card">
         <h5 class="card-title"><%= community.name %></h5>
         <p><span class="far fa-user" style="margin-right: 3px"></span><%= member.where(community_id:community.id).count %> </p>
       </div>
       <div class="card">
         <ul class="list-group list-group-flush">
           <% community.tag_list.shuffle.first(3).each do |t| %>
-            <li class="list-group-item">#<%= t %></li>
+            <%= link_to search_tag_path(t),class:"text-decoration-none" do %>
+              <li class="list-group-item">#<%= t %></li>
+            <% end %>
           <% end %>
           <% tag_count =  community.tag_list.count%>
           <% while tag_count < 3 do%>
@@ -23,8 +25,8 @@
         </ul>
       </div>
       <div class="card-footer">
-        <small class="text-muted"><%= user.find(community.user_id).name %></small>
+        <small class="text-muted"><%= link_to user.find(community.user_id).name ,profile_path(user.find(community.user_id).userid),class:"text-decoration-none text-dark"%></small>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
