--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -1,5 +1,5 @@
 <% mates.each do |user| %>
-  <div class="collapse show mb-1" id="collapseExample1">
+  <div class="collapse show mb-1">
     <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
         <%= link_to profile_path(user.userid) do %>
         <div class="d-flex justify-content-between">
