--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,5 +1,6 @@
 <%= stylesheet_link_tag 'communities'%>
 <%= javascript_pack_tag "communities/new" %>
+<%= javascript_pack_tag 'profiles/edit' %>
 
 <script>
     $(document).ready(function () {
@@ -16,15 +17,26 @@
   <%= form_for(@community, url: communities_path, multipart: true,class: "needs-validation") do |f| %>
     <main>
       <div class="py-5 text-center">
-        <h2>コミュニティ新規作成</h2>
-        <p class="lead">コミュニティを作成して、同じ趣味の友だちを探しましょう！</p>
+        <h2>プロフィール編集</h2>
         <%= render 'layouts/error_messages', model: f.object %>
-        <div class="uploader">
-          <div class="form1">
+        <p class="lead">ここではコミュニティの内容を作成することが出来ます</p>
+        <p id="image_text">現在のアイコン</p>
+        <div class="uploader mt-4">
+          <div id="user_icon">
             <label>
-              <%= image_tag "default_icon" ,id:"preview",class: "d-block mx-auto mb-4 border border-success rounded icon"%>
-            </label><br /><br />
+              <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
+              <% if current_user.image.nil? %>
+                <%= image_tag "default_icon" , :size => '200x200', class: "user_image", style:"width:200px;height:200pz"%>
+              <% else %>
+                <%= image_tag "/community_image/#{@community.image}", :size => '200x200', class:"user_image"%>
+              <% end %>
+            </label>
           </div>
+          <label>
+            <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
+            <canvas id="cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
+            <img src="" id="result-img" style="display:none;width: 200px;height: 200px;">
+          </label>
         </div>
       </div>
       <div class="col-md-12 col-lg-12">
@@ -54,6 +66,51 @@
 
           <div class="col-sm-12 text-center">
             <%= f.submit "新規作成", class:"w-50 btn btn-primary btn-lg mb-4"%>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">画像トリミング</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <h4 class="modal-text">画像を選択してください</h4>
+              <div class="form_wrapper">
+                <div id="image-wrapper">
+                  <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default",accept: 'image/jpg,image/jpeg,image/png' %>
+                  <%= f.hidden_field :icon, id: "image" %>
+                  <%= f.hidden_field :image_x, id: "image_x" %>
+                  <%= f.hidden_field :image_y, id: "image_y" %>
+                  <%= f.hidden_field :image_w, id: "image_w" %>
+                  <%= f.hidden_field :image_h, id: "image_h" %>
+                  <%= f.hidden_field :aspect_numerator, id: "aspect_numerator", value: "1.0" %>
+                  <%= f.hidden_field :aspect_denominator ,id: "aspect_denominator", value: "1.0" %>'
+                  <div id="prev_img">
+                    <% if current_user.image.nil? %>
+                      <%= image_tag "default_icon" , :size => '200x200', class: "user_image"%>
+                    <% else %>
+                      <%= image_tag "/user_images/#{current_user.image}", :size => '200x200', class:"user_image"%>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+              <div id="modal_area" style="display: none;">
+                <div class="modal_wrapper">
+                  <div class="modal_padding modal_title_wrapper">
+                    <h4>範囲を選択してください</h4>
+                  </div>
+                  <div class="canvas_wrapper">
+                    <canvas id="source_canvas" width="1" height="1"></canvas>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">画像を切り取る</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
