--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -53,11 +53,6 @@
           </div>
 
           <div class="col-sm-12">
-            <%= f.label "アイコン", class:"form-label"%>
-            <%= f.file_field :icon,autocomplete: "icon", class: "form-control",:placeholder=>"icon",onchange: "previewImage(this);"%>
-          </div>
-
-          <div class="col-sm-12">
             <div class="search-area-colum form-contents">
               <%= f.label "タグ (1つ2~20文字)" , class:"form-label"%>
               <%= f.text_field :tag_list, id:"myTags",autocomplete:"tag_list"%>
@@ -69,7 +64,8 @@
           </div>
         </div>
       </div>
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index:10000">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
