--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col-12">
-              <%= f.label "ユーザーID(先頭のみ英語 半角英数字(_) 1~20文字)", class:"form-label" %>
+              <%= f.label "ユーザーID(先頭のみ英語 半角英数字(アンダーバー) 1~20文字)", class:"form-label" %>
               <div class="input-group">
                 <span class="input-group-text">@</span>
                 <%= f.text_field :userid ,class:"form-control",id:"userid",placeholder: "UserID" ,maxlength:"20"%>
